<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/apiary"
            android:icon="@android:drawable/ic_menu_today"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_find_hive"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/find_hive" />
        <item
            android:id="@+id/logout"
            android:icon="@android:drawable/ic_lock_lock"
            android:title="@string/logout" />
    </group>
</menu>