<?xml version="1.0" encoding="utf-8"?>

<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/inspection_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/inspection_date"
        android:textColor="@color/primaryDarkColor"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/inspection_temper"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/temper"
        android:textColor="@color/primaryDarkColor"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/inspection_queen_condition"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/queen_condition"
        android:textColor="@color/primaryDarkColor"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/inspection_hive_condition"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/hive_condition"
        android:textColor="@color/primaryDarkColor"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/phyto_used"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/phytosanitary_used"
        android:textColor="@color/primaryDarkColor"
        android:textStyle="bold" />

</TableRow>